# siws-recap

./: Cargo.toml  README.md
src/: capability.rs  lib.rs
tests/: siwe_with_caps.txt  siwe_with_interleaved_resources.txt  siwe_with_no_caps.txt  siwe_with_statement.txt  siwe_with_statement_no_caps.txt
