[package]
name = "siws-recap"
description = "Mechanism on top of Sign-In with Solana for informed consent to delegate capabilities with an extensible scope mechanism."
license = "Apache-2.0 OR MIT"
version = "0.0.1"
edition = "2021"
readme = "README.md"
keywords = ["solana", "sign-in", "siws"]
repository = "https://github.com/pileks/siws-recap/"
homepage = "https://github.com/pileks/siws-recap/"

[dependencies]
base64 = "0.12"
iri-string = { version = "0.6", features = ["serde"] }
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2" }
thiserror = "1"
cid = "0.10"
ucan-capabilities-object = "0.1"
serde_jcs = "0.1"
siws = "0.0.2"